@@ -12,7 +12,9 @@ This document contains the release notes for Emacs-enhanced
 
 ** <2025-01-08>
 
-Added open-with replacement using dired.
+- Added open-with replacement using dired.
+- Replacing =dired-async-mode= with =my/rsync= function to enable asynchronous copy directly from dired.
+- Bind `C` in `dired-mode-map` to invoke the new rsync functionality.
 
 ** <2025-01-07>
 
